# NHL-Legacy-Roster-Editor

./: .gitignore  NHLLegacyRosterEditor.spec  NHL_LEGACY_MOD_NOTES.md  README.md  desktop_launcher.py  patch_desktop_app_bulk_stats.ps1  pyproject.toml
backups/: fa_test.db  roster_20260608152448.db
backups/editor_workspaces/: active_workspace.json
backups/xenia-config/: EA SPORTS NHL Legacy Edition.config.toml.bak-20260620-pre-mod
build_checksumfix/NHLLegacyRosterEditor/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.pyz  PYZ-00.toc  xref-NHLLegacyRosterEditor.html
build_finalpass/NHLLegacyRosterEditor/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.pyz  PYZ-00.toc
data/: 2026_draft_class.json  overall_calibration_samples.json  wheeler_top100_2026.json
data/frozenpool_edge/: 2024_2025_r__shot_speed.csv  2024_2025_r__shot_speed.json  2024_2025_r__skating_distance.csv  2024_2025_r__skating_distance.json  2024_2025_r__skating_speed.csv  (+8 more)
docs/: reverse-engineering-notes.md
franchise_mode_lab/: analyze_dynasty.py  dump_ppc_context.py  find_address_refs.py  prototype_add_32_teams.py  rebuild_dynasty_probe.py  scan_xex_runtime.py  summarize_xex_scan.py
tests/: test_advanced_metric_targets.py  test_attribute_stabilization.py  test_contract_terms_and_expansion.py  test_contract_writes.py  test_draft_name_aliases.py  test_metric_player_matching.py  test_overall_calibration.py  test_roster_identity_and_organization.py  test_workspace_paths.py
tools/: apply_wheeler_top100_to_active_roster.py  build_2026_draft_manifest.py  build_wheeler_top100_manifest.py
(+466 files in other folders)
