[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nhl-legacy-editor"
version = "0.1.0"
description = "Starter tooling for inspecting NHL Legacy Xbox 360 roster saves on PC."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.0,<4",
]

[project.scripts]
nhl-legacy-editor = "src.nhl_legacy_editor.cli:main"
nhl-legacy-desktop = "src.nhl_legacy_editor.desktop_app:main"

[tool.setuptools]
packages = ["src.nhl_legacy_editor"]
